Fixed alignment for mobile on all sections of chapter

--- a/themes/pdt-nce/assets/scss/pages/chapter.scss
+++ b/themes/pdt-nce/assets/scss/pages/chapter.scss
@@ -34,7 +34,7 @@ $triary: #007FFF;
 
 	margin-bottom: 60px;
 	height:140px;
-	min-width:300px;
+	min-width:160px;
 	//background-color:blue;
 
 
@@ -67,14 +67,21 @@ $triary: #007FFF;
 .timeline-div{
     min-height:900px;
     margin-top:100px;
+    margin-bottom:80px;
 }
 
+.timeline-page-header{
+    margin-top:80px;
+}
+.timeline-page-header-text{
+    font-size:60px;
+}
 
 .subheading{
     color: $secondary;
 }
 .timeline-heading >h3{
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid $secondary;
     padding-bottom:8px;
     font-size:26px;
 }
@@ -86,6 +93,7 @@ $triary: #007FFF;
     padding:4px 0 0 0;
     margin-top:22px;
     list-style: none;
+
 }
 
 .timeline>li:nth-child(even) {
@@ -231,3 +239,263 @@ $triary: #007FFF;
     box-shadow: 0 0 5px  $secondary;
 }
 
+/* Medium Devices, .visible-md-* */
+@media (min-width: 1304px) and (max-width: 1454px) {
+	/*Style for even div.line*/
+.timeline>li:nth-child(odd) .line:before {
+    content: "";
+    position: absolute;
+    top: 60px;
+    bottom: 0;
+    left: 650px;
+    width: 4px;
+    height:340px;
+    background-color: $secondary;
+    -ms-transform: rotate(-25deg); /* IE 9 */
+    -webkit-transform: rotate(-25deg); /* Safari */
+    transform: rotate(-25deg);
+    box-shadow: 0 0 5px $secondary;
+}
+/*Style for odd div.line*/
+.timeline>li:nth-child(even) .line:before  {
+    content: "";
+    position: absolute;
+    top: 60px;
+    bottom: 0;
+    left: 510px;
+    width: 4px;
+    height:340px;
+    background-color: $secondary;
+    -ms-transform: rotate(25deg); /* IE 9 */
+    -webkit-transform: rotate(25deg); /* Safari */
+    transform: rotate(25deg);
+    box-shadow: 0 0 5px $secondary;
+}
+	
+  
+  /*Timeline*/
+  .timeline {
+    position: relative;
+    padding:4px 0 0 0;
+    margin-top:22px;
+    list-style: none;
+}
+
+.timeline>li:nth-child(even) {
+    position: relative;
+    margin-bottom: 50px;
+    height: 180px;
+    right:-70px;
+}
+
+.timeline>li:nth-child(odd) {
+    position: relative;
+    margin-bottom: 50px;
+    height: 180px;
+    left:-50px;
+}
+
+  
+}
+
+/* Medium Timeline */
+@media (min-width: 1198px) and (max-width: 1304px) {
+	/*Style for even div.line*/
+.timeline>li:nth-child(odd) .line:before {
+    content: "";
+    position: absolute;
+    top: 60px;
+    bottom: 0;
+    left: 580px;
+    width: 4px;
+    height:340px;
+    background-color: $secondary;
+    -ms-transform: rotate(0deg); /* IE 9 */
+    -webkit-transform: rotate(0deg); /* Safari */
+    transform: rotate(0deg);
+    box-shadow: 0 0 5px $secondary;
+}
+/*Style for odd div.line*/
+.timeline>li:nth-child(even) .line:before  {
+    content: "";
+    position: absolute;
+    top: 60px;
+    bottom: 0;
+    left:580px;
+    width: 4px;
+    height:340px;
+    background-color: $secondary;
+    -ms-transform: rotate(0deg); /* IE 9 */
+    -webkit-transform: rotate(0deg); /* Safari */
+    transform: rotate(0deg);
+    box-shadow: 0 0 5px $secondary;
+}
+	
+.timeline>li:nth-child(even) {
+    position: relative;
+    margin-bottom: 50px;
+    height: 180px;
+    right:0px;
+}
+
+.timeline>li:nth-child(odd) {
+    position: relative;
+    margin-bottom: 50px;
+    height: 180px;
+    left:0px;
+}
+
+  
+}
+
+/* Medium Timeline */
+@media (min-width: 992px) and (max-width: 1197px) {
+	/*Style for even div.line*/
+.timeline>li:nth-child(odd) .line:before {
+    content: "";
+    position: absolute;
+    top: 60px;
+    bottom: 0;
+    left: 483px;
+    width: 4px;
+    height:340px;
+    background-color: $secondary;
+    -ms-transform: rotate(0deg); /* IE 9 */
+    -webkit-transform: rotate(0deg); /* Safari */
+    transform: rotate(0deg);
+    box-shadow: 0 0 5px $secondary;
+}
+/*Style for odd div.line*/
+.timeline>li:nth-child(even) .line:before  {
+    content: "";
+    position: absolute;
+    top: 60px;
+    bottom: 0;
+    left:483px;
+    width: 4px;
+    height:340px;
+    background-color: $secondary;
+    -ms-transform: rotate(0deg); /* IE 9 */
+    -webkit-transform: rotate(0deg); /* Safari */
+    transform: rotate(0deg);
+    box-shadow: 0 0 5px $secondary;
+}
+	
+.timeline>li:nth-child(even) {
+    position: relative;
+    margin-bottom: 50px;
+    height: 180px;
+    right:0px;
+}
+
+.timeline>li:nth-child(odd) {
+    position: relative;
+    margin-bottom: 50px;
+    height: 180px;
+    left:0px;
+}
+
+  
+}
+
+
+
+/* Small Devices, Tablets */
+@media (min-width: 768px) and (max-width: 991px) {
+
+
+
+li > .timeline{
+        margin-bottom:30px;
+}
+li > .timeline-inverted{
+    margin-bottom:60px;
+}
+
+		/*Style for even div.line*/
+.timeline>li:nth-child(odd) .line:before {
+    content: "";
+    position: absolute;
+    top: 60px;
+    bottom: 0;
+    left: 600px;
+    width: 4px;
+    height:340px;
+    background-color: $secondary;
+    -ms-transform: rotate(-44deg); /* IE 9 */
+    -webkit-transform: rotate(-44deg); /* Safari */
+    transform: rotate(-44deg);
+    box-shadow: 0 0 5px $secondary;
+}
+/*Style for odd div.line*/
+.timeline>li:nth-child(even) .line:before  {
+    content: "";
+    position: absolute;
+    top: 60px;
+    bottom: 0;
+    left: 370px;
+    width: 4px;
+    height:340px;
+    background-color: $secondary;
+    -ms-transform: rotate(44deg); /* IE 9 */
+    -webkit-transform: rotate(44deg); /* Safari */
+    transform: rotate(44deg);
+    box-shadow: 0 0 5px $secondary;
+}
+	
+
+
+  .timeline > li:nth-child(even) {
+    margin-bottom: 0px;
+    min-height: 0px;
+    right: 0px;
+  }
+  .timeline > li:nth-child(odd) {
+    margin-bottom: 0px;
+    min-height: 0px;
+    left: 0px;
+  }
+  .timeline>li:nth-child(even) .timeline-image {
+    left: 0px;
+    margin-left: 0px;
+  }
+  .timeline>li:nth-child(odd) .timeline-image {
+    left: 560px;
+    margin-left: 0px;
+  }
+  .timeline > li:nth-child(even) .timeline-panel {
+    width: 70%;
+    padding: 0 0 20px 0px;
+    text-align: left;
+  }
+  .timeline > li:nth-child(odd) .timeline-panel {
+    width: 70%;
+    padding: 0 0 20px 0px;
+    text-align: right;
+  }
+  .timeline > li .line {
+    display: none;
+  }
+}
+@media (max-width: 767px) {
+.timeline-block{
+    background-color: rgba(255,255,255,.8);
+    width: 90vw;
+    border-radius: 10px;
+    color: #003054;
+    margin-bottom:40px;
+}
+
+.timeline-body{
+    padding-left: 20px;
+    padding-right: 20px;
+    font-weight: bold;
+    padding-bottom: 30px;
+}
+
+.subheading{
+    color: $primary;
+    font-weight: bold;
+    font-size:30px;
+}
+}
